--- a/contribution.html
+++ b/contribution.html
@@ -7,72 +7,95 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="Contribution" content="Learn how you can support the museum.">
         <title>Contribution</title>
-        <link rel="stylesheet" href="contribution.css">
+        <link rel="stylesheet" href="CSS/Reset.css">
+        <link rel="stylesheet" href="CSS/Main.css">
+        <link rel="stylesheet" href="CSS/Nav.css">
+        <link rel="stylesheet" href="CSS/Footer.css">
+        <link rel="stylesheet" href="CSS/contribution.css">
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
         <header>
             <section class="section-navigation">
-                <nav>
-                    <a href="/index.html"> <img src="#" alt="Community science museum"></a>
+                <input type="checkbox" id="menu-checkbox">
+                <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
+                <a href="/index.html" > <img src="/images/Logo_Color.png" class="logo" alt="Community science museum"></a>
+                <nav> 
                     <ul>
                         <li>
                             <a href="/visit-us.html">Visit us</a>
                             <a href="/exhibitions.html">Exhibitions</a>
                             <a href="/contribution.html">Contributions</a>
+                            <a class="link-buytickets" href="#">CONTACT US</a>
                         </li>
                     </ul>
                 </nav>
+                
             </section>
         </header>
 
         <section class="section-contribution">
-            <h1>Contribution</h1>
-            <div class="card-container">
-                <div class="vertical-card">
-                    <img src="#" alt="image">
-                    <div class="card-content">
-                        <h2>Support</h2>
-                        <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.
-                            You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
-                        </p>
-                    </div>  
+            <div class="wrapper-main contribution" >
+                <h1>Contribution</h1>
+                <div class="card-container">
+                    <div class="vertical-card">
+                        <div class="v-card-content-1">
+                            <img class="vertical-card-image" src="/images/Hands-holding-heart200.jpg" alt="A person showing a heart plush lying between their hands">
+                        </div>
+                        <div class="v-card-content-2">
+                            <h2>Support</h2>
+                            <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.
+                                You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
+                            </p>
+                        </div>  
+                    </div>
+                    <div class="vertical-card">
+                        <div class="v-card-content-1">
+                            <img class="vertical-card-image" src="/images/Holding hand.jpg" alt="Holding hands in a compforting gesture">
+                        </div>
+                        <div class="v-card-content-2">
+                            <h2>Volunteer</h2>
+                            <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
+                                You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.
+                            </p>
+                        </div>  
+                    </div>
+                    <div class="vertical-card">
+                        <div class="v-card-content-1">
+                            <img class="vertical-card-image" src="images/Two-people-atwork-talking.jpg" alt="Two people at work talking">
+                        </div>
+                        <div class="v-card-content-2">
+                            <h2>Internship</h2>
+                            <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
+                                You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
+                            </p>
+                        </div>  
+                    </div>
                 </div>
-                <div class="vertical-card">
-                    <img src="#" alt="image">
-                    <div class="card-content">
-                        <h2>Volunteer</h2>
-                        <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
-                            You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.
-                        </p>
-                    </div>  
-                </div>
-                <div class="vertical-card">
-                    <img src="#" alt="image">
-                    <div class="card-content">
-                        <h2>Internship</h2>
-                        <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
-                            You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
-                        </p>
-                    </div>  
+                <div class="get-in-touch">
+                    <button class="button-get-in-touch">Get in touch</button>
                 </div>
             </div>
+
         </section>
 
         <footer>
-            <img src="#" alt="Community Science Museum logo">
-            <div class="footer-links">
-                <ul>
-                    <li>
-                        <a href="/visit-us.html">Visit us</a>
-                        <a href="/contribution.html">Contributions</a>
-                        <a href="#">Terms & Conditions</a>
-                        <a href="#">Privacy & Cookies</a>
-                    </li>
-                </ul>
-            </div>
+            <img src="/images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
+            <ul>
+                <li>
+                    <a href="/visit-us.html">Visit us</a>
+                    <a href="/contribution.html">Contributions</a>
+                    <a href="#">Terms & Conditions</a>
+                    <a href="#">Privacy & Cookies</a>
+                </li>
+            </ul>
+
             <div class="footer-socials">
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
 
             </div>
         </footer>
