--- a/exhibitions.html
+++ b/exhibitions.html
@@ -11,8 +11,7 @@
         <link rel="stylesheet" href="CSS/Nav.css">
         <link rel="stylesheet" href="CSS/Footer.css">
         <link rel="stylesheet" href="CSS/Upcoming-Events.css">
-
-        <link rel="stylesheet" href="exhibitions.css">
+        <link rel="stylesheet" href="CSS/exhibitions.css">
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
     </head>
 
