--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="CSS/Nav.css">
         <link rel="stylesheet" href="CSS/Footer.css">
         <link rel="stylesheet" href="CSS/Upcoming-Events.css">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="CSS/index.css">
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,8 +33,8 @@
                     <ul>
                         <li>
                             <a href="/visit-us.html">Visit us</a>
-                            <a href="#">Exhibitions</a>
-                            <a href="#">Contributions</a>
+                            <a href="/exhibitions.html">Exhibitions</a>
+                            <a href="/contribution.html">Contributions</a>
                             <a class="link-buytickets" href="#">CONTACT US</a>
                         </li>
                     </ul>
