--- a/visit-us.html
+++ b/visit-us.html
@@ -26,9 +26,9 @@
             <nav> 
                 <ul>
                     <li>
-                        <a href="/visit-us.html">Visit us</a>
-                        <a href="/exhibitions.html">Exhibitions</a>
-                        <a href="/contribution.html">Contributions</a>
+                        <a href="visit-us.html">Visit us</a>
+                        <a href="exhibitions.html">Exhibitions</a>
+                        <a href="contribution.html">Contributions</a>
                         <a class="link-buytickets" href="#">CONTACT US</a>
                     </li>
                 </ul>
