--- a/contribution.html
+++ b/contribution.html
@@ -20,7 +20,7 @@
             <section class="section-navigation">
                 <input type="checkbox" id="menu-checkbox">
                 <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-                <a href="/index.html" > <img src="/images/Logo_Color.png" class="logo" alt="Community science museum"></a>
+                <a href="index.html" > <img src="images/Logo_Color.png" class="logo" alt="Community science museum"></a>
                 <nav> 
                     <ul>
                         <li>
@@ -41,7 +41,7 @@
                 <div class="card-container">
                     <div class="vertical-card">
                         <div class="v-card-content-1">
-                            <img class="vertical-card-image" src="/images/Hands-holding-heart200.jpg" alt="A person showing a heart plush lying between their hands">
+                            <img class="vertical-card-image" src="images/Hands-holding-heart200.jpg" alt="A person showing a heart plush lying between their hands">
                         </div>
                         <div class="v-card-content-2">
                             <h2>Support</h2>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="vertical-card">
                         <div class="v-card-content-1">
-                            <img class="vertical-card-image" src="/images/Holding hand.jpg" alt="Holding hands in a compforting gesture">
+                            <img class="vertical-card-image" src="images/Holding hand.jpg" alt="Holding hands in a compforting gesture">
                         </div>
                         <div class="v-card-content-2">
                             <h2>Volunteer</h2>
@@ -81,11 +81,11 @@
         </section>
 
         <footer>
-            <img src="/images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
+            <img src="images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
             <ul>
                 <li>
-                    <a href="/visit-us.html">Visit us</a>
-                    <a href="/contribution.html">Contributions</a>
+                    <a href="visit-us.html">Visit us</a>
+                    <a href="contribution.html">Contributions</a>
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy & Cookies</a>
                 </li>
