--- a/exhibitions.html
+++ b/exhibitions.html
@@ -20,7 +20,7 @@
             <section class="section-navigation">
                 <input type="checkbox" id="menu-checkbox">
                 <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-                <a href="/index.html" > <img src="/images/Logo_Color.png" class="logo" alt="Community science museum"></a>
+                <a href="index.html" > <img src="images/Logo_Color.png" class="logo" alt="Community science museum"></a>
                 <nav> 
                     <ul>
                         <li>
@@ -49,7 +49,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="/images/skeleton-414543_1920.jpg" alt="Four skeletons showing human evolution">
+                    <img class="v-card-image" src="images/skeleton-414543_1920.jpg" alt="Four skeletons showing human evolution">
                     <div class="card-content">
                         <h2>Evolution</h2>
                         <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world....
@@ -58,7 +58,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="/images/jesse-orrico-60373.jpg" alt="Transparent human skull">
+                    <img class="v-card-image" src="images/jesse-orrico-60373.jpg" alt="Transparent human skull">
                     <div class="card-content">
                         <h2>Biology and Medicine</h2>
                         <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
@@ -68,7 +68,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="/images/andrew-ruiz-348421.jpg" alt="Person in astronaut suit sitting in a device">
+                    <img class="v-card-image" src="images/andrew-ruiz-348421.jpg" alt="Person in astronaut suit sitting in a device">
                     <div class="card-content">
                         <h2>Robotics and AI</h2>
                         <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot....
@@ -77,7 +77,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="/images/genoa-956405_1920.jpg" alt="Huge ant">
+                    <img class="v-card-image" src="images/genoa-956405_1920.jpg" alt="Huge ant">
                     <div class="card-content">
                         <h2>Ecology</h2>
                         <p>As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
@@ -101,7 +101,7 @@
                     <div class="horizontalcard-container">
                         <div class="horizontal-card">
                             <div class="card-content-1">
-                                <img src="/images/exhibition-1863344_1920.jpg" alt="image of exhibition">
+                                <img src="images/exhibition-1863344_1920.jpg" alt="image of exhibition">
                             </div>
                             <div class="card-content-2">
                                 <h6 class="card-date">9.JAN.2023</h6>
@@ -110,7 +110,7 @@
                         </div>
                         <div class="horizontal-card">
                             <div class="card-content-1">
-                                <img src="/images/exhibition-1863344_1920.jpg" alt="image of exhibition">
+                                <img src="images/exhibition-1863344_1920.jpg" alt="image of exhibition">
                             </div>
                             <div class="card-content-2">
                                 <h6 class="card-date">9.JAN.2023</h6>
@@ -128,11 +128,11 @@
 
 
         <footer>
-            <img src="/images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
+            <img src="images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
             <ul>
                 <li>
-                    <a href="/visit-us.html">Visit us</a>
-                    <a href="/contribution.html">Contributions</a>
+                    <a href="visit-us.html">Visit us</a>
+                    <a href="contribution.html">Contributions</a>
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy & Cookies</a>
                 </li>
