--- a/visit-us.html
+++ b/visit-us.html
@@ -22,7 +22,7 @@
         <section class="section-navigation">
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-            <a href="/index.html" > <img src="/images/Logo_Color.png" class="logo" alt="Community science museum"></a>
+            <a href="index.html" > <img src="images/Logo_Color.png" class="logo" alt="Community science museum"></a>
             <nav> 
                 <ul>
                     <li>
@@ -125,12 +125,12 @@
 
 
     <footer>
-        <img src="#" alt="Community Science Museum logo">
+        <img src="images/Logo_White.png" alt="Community Science Museum logo">
         <div class="footer-links">
             <ul>
                 <li>
-                    <a href="#">Visit us</a>
-                    <a href="#">Contributions</a>
+                    <a href="visit-us.html">Visit us</a>
+                    <a href="contribution.html">Contributions</a>
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy & Cookies</a>
                 </li>
