--- a/visit-us.html
+++ b/visit-us.html
@@ -125,18 +125,21 @@
 
 
     <footer>
-        <img src="images/Logo_White.png" alt="Community Science Museum logo">
-        <div class="footer-links">
-            <ul>
-                <li>
-                    <a href="visit-us.html">Visit us</a>
-                    <a href="contribution.html">Contributions</a>
-                    <a href="#">Terms & Conditions</a>
-                    <a href="#">Privacy & Cookies</a>
-                </li>
-            </ul>
-        </div>
+        <img src="images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
+        <ul>
+            <li>
+                <a href="visit-us.html">Visit us</a>
+                <a href="contribution.html">Contributions</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy & Cookies</a>
+            </li>
+        </ul>
+
         <div class="footer-socials">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
 
         </div>
     </footer>
