--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <section class="section-navigation">
                 <input type="checkbox" id="menu-checkbox">
                 <label for="menu-checkbox" class="hamburger-icon"><i class="fas fa-bars"></i></label>
-                <a href="/index.html" > <img src="images/Logo_Color.png" class="logo" alt="Community science museum"></a>
+                <a href="index.html" > <img src="images/Logo_Color.png" class="logo" alt="Community science museum logo"></a>
                 <nav> 
                     <ul>
                         <li>
