Update of responsibleness

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="visit-us.html">Visit us</a>
                             <a href="exhibitions.html">Exhibitions</a>
                             <a href="contribution.html">Contributions</a>
-                            <a class="link-buytickets" href="#">CONTACT US</a>
+                            <a class="link-contactus" href="#">CONTACT US</a>
                         </li>
                     </ul>
                 </nav>
@@ -55,6 +55,7 @@
             </div>
             <div class="intro-2">
                 <img class="intro-image" src="images/Header_Image.png" alt="Picture of scientist working">
+                <img class="intro-image-small" src="images/Header_Image_Mobile.png" alt="Picture of scientist working">
             </div>
         </section>
     
@@ -110,7 +111,7 @@
                         Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.
 
                     </p class="p-space">
-                    <button>Check out Exhibition spaces</button>
+                    <button class="button-wide">Check out Exhibition spaces</button>
                 </div>
                 <div class="forkids-2">
                     <img src="images/billetto-editorial-334686.jpg" class="img-forkids" alt="Child painting device over eyes and a headset">
@@ -130,7 +131,7 @@
                     Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.
                     Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.
                     </p>
-                    <button>Check out Exhibition spaces</button>
+                    <button class="button-wide" >Check out Exhibition spaces</button>
                 </div>
             </div>
             
@@ -143,7 +144,7 @@
                     <p> Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them.
                         We have online records, laboratory space, and a working relationship with a number of universities around the country.
                     </p>
-                    <button>Check out Exhibition spaces</button>
+                    <button class="button-wide">Check out Exhibition spaces</button>
                 </div>
                 <div class="forresearchers-2">
                     <img src="images/people-219985_1280.jpg" class="img-forresearchers" alt="Person looking into microscope">
