--- a/exhibitions.html
+++ b/exhibitions.html
@@ -27,7 +27,7 @@
                             <a href="visit-us.html">Visit us</a>
                             <a href="exhibitions.html">Exhibitions</a>
                             <a href="contribution.html">Contributions</a>
-                            <a class="link-buytickets" href="#">CONTACT US</a>
+                            <a class="link-contactus" href="#">CONTACT US</a>
                         </li>
                     </ul>
                 </nav>
@@ -40,7 +40,7 @@
                 <h1>Exhibitions</h1>
             <div class="card-container">
                 <div class="vertical-card">
-                    <img class="v-card-image" src="images/celso-405219.jpg" alt="moon stages">
+                    <img src="images/celso-405219.jpg" alt="moon stages">
                     <div class="card-content">
                         <h2>Cosmology</h2>
                         <p>Explore the wonders of our cosmos. Our fantastic exhibition, "The Sky Above Us", explores the night sky and what we can see and know about the universe around us. We’ll locate the various constellations and galaxies that can be seen and learn a bit about the early navigators...
@@ -49,7 +49,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="images/skeleton-414543_1920.jpg" alt="Four skeletons showing human evolution">
+                    <img src="images/skeleton-414543_1920.jpg" alt="Four skeletons showing human evolution">
                     <div class="card-content">
                         <h2>Evolution</h2>
                         <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here? Since Darwin proposed his theory of evolution we have had a framework for exploring and understanding our place in this world....
@@ -58,7 +58,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="images/jesse-orrico-60373.jpg" alt="Transparent human skull">
+                    <img src="images/jesse-orrico-60373.jpg" alt="Transparent human skull">
                     <div class="card-content">
                         <h2>Biology and Medicine</h2>
                         <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique insights into the great wonders of the tiny world.
@@ -68,7 +68,7 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="images/andrew-ruiz-348421.jpg" alt="Person in astronaut suit sitting in a device">
+                    <img src="images/andrew-ruiz-348421.jpg" alt="Person in astronaut suit sitting in a device">
                     <div class="card-content">
                         <h2>Robotics and AI</h2>
                         <p>The information revolution is here and robotics and artificial intelligence are the science of the future. From useful home applications of AI to industrial uses of robotics, the future is here. You can even say hello and shake the hand of Rob the Robot....
@@ -77,11 +77,11 @@
                     </div>  
                 </div>
                 <div class="vertical-card">
-                    <img class="v-card-image" src="images/genoa-956405_1920.jpg" alt="Huge ant">
+                    <img  src="images/genoa-956405_1920.jpg" alt="Huge ant">
                     <div class="card-content">
                         <h2>Ecology</h2>
                         <p>As we learn more and more of the impact humans are having on the planet, the more important it becomes that scientists explore how to create a sustainable future not just for humans but for the whole planet.
-                            In our ecology section of the museum, we unpack the dangers...
+                            In our ecology section of the museum, we unpack...
                         </p>
                         <button>Read more</button>
                     </div>  
