--- a/visit-us.html
+++ b/visit-us.html
@@ -29,7 +29,7 @@
                         <a href="visit-us.html">Visit us</a>
                         <a href="exhibitions.html">Exhibitions</a>
                         <a href="contribution.html">Contributions</a>
-                        <a class="link-buytickets" href="#">CONTACT US</a>
+                        <a class="link-contactus" href="#">CONTACT US</a>
                     </li>
                 </ul>
             </nav>
@@ -49,32 +49,23 @@
                     <h2>Opening Hours</h2>
                     <table>
                         <tr>
-                            <th>Monday:</th>
-                            <th>Closed</th>
+                            <th class="p-bold">MONDAY:</th>
+                            <th>CLOSED</th>
                         </tr>
                         <tr>
-                            <th>Tuesday:</th>
-                            <th>10:00 - 16:00</th>
-                            
-                        </tr>
-                        <tr>
-                            <th>Wednesday:</th>
+                            <th class="p-bold">TUE-THU:</th>
                             <th>10:00 - 16:00</th>
                         </tr>
                         <tr>
-                            <th>Thursday:</th>
-                            <th>10:00 - 16:00</th>
-                        </tr>
-                        <tr>
-                            <th>Friday:</th>
+                            <th class="p-bold">FRIDAY:</th>
                             <th>10:00 - 19:00</th>
                         </tr>
                         <tr>
-                            <th>Saturday:</th>
+                            <th class="p-bold">SATURDAY:</th>
                             <th>09:00 - 16:00</th>
                         </tr>
                         <tr>
-                            <th>Sunday:</th>
+                            <th class="p-bold">SUNDAY:</th>
                             <th>09:00 - 13:00</th>
                         </tr>
                         
@@ -82,35 +73,44 @@
                 </div>
                 <div class="variousinfo-location">
                     <h2>Location</h2>
-                    <p>The museum is located at [student to include address].</p>
+                    <p>The museum is located at </p>
+                    <p class="p-bold">FREDERIKS GATE 2, 0164 OSLO</p>
                 </div>
                 <div class="variousinfo-admission">
                     <h2>Admission</h2>
-                    <table>
+                    <table class="table-fees">
                         <tr>
                             <th>Entrance fee:</th>
-                            <th>FREE</th>
+                            <th class="p-bold">FREE</th>
                         </tr>
                         <tr>
                             <th>Guided tour:</th>
-                            <th>70 NOK</th>
+                            <th class="p-bold">70 NOK</th>
                         </tr>
                     </table>
-                    <p>If you would like to organize a guided tour for your group of 6 or more people, 
-                    please contact us to arrange the tour.</p>
+                    <p>If you would like to organize a guided tour for your</p>
+                    <p>group of 6 or more people,please contact us</p>
+                    <p>to arrange the tour.</p>
                 </div>
                 <div class="variousinfo-more">
                     <div class="more-accessibility">
+                        <i class="fa-solid fa-wheelchair-move"></i>
                         <h2>Accessibility</h2>
-                        <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.</p>
+                        <p>The museum has wheelchair accessibility ramps. It also has audio guides </p>
+                        <p>and braille display signs for the visually impaired.</p>
                     </div>
                     <div class="more-foodanddrink">
+                        <i class="fa-solid fa-utensils"></i>
                         <h2>Food and Drink</h2>
-                        <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.</p>
+                        <p>There is a café attached to the museum where you can get</p>
+                        <p>light lunches, soft drinks, coffee, snacks and more.</p>
                     </div>
                     <div class="more-shop">
+                        <i class="fa-solid fa-bag-shopping"></i>
                         <h2>Shop</h2>
-                        <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</p>
+                        <p>Our shop offers a range of memorabilia from the museum </p>
+                        <p>as well as great gifts and activity packs that allow you to</p>
+                        <p>continue to explore science even after you’ve left the museum.</p>
                     </div>
                 </div>
 
