--- a/index.html
+++ b/index.html
@@ -158,11 +158,8 @@
                 <h2>News</h2>
             <div class="news-container">
                 <a href="#" class="vertical-card">
-                    <div class="v-card-content-1">
-                        <img class="vertical-card-image" src="images/skeleton-414543_1920.jpg" alt="Skeletons depicting evolution">
-                    </div>
-                    
-                    <div class="v-card-content-2">
+                    <img class="vertical-card-image" src="images/skeleton-414543_1920.jpg" alt="Skeletons depicting evolution">
+                    <div class="v-card-content">
                         <h6 class="card-date">9.JAN.2023</h6>
                         <h5 class="card-title">Evolution Exhibition</h5>
                         <p>Read more</p>
@@ -170,10 +167,8 @@
                     </div>
                 </a>
                 <a href="#" class="vertical-card">
-                    <div class="v-card-content-1">
-                        <img class="vertical-card-image" src="images/exhibition-1863344_1920.jpg" alt="An exhibition">
-                    </div>
-                    <div class="v-card-content-2">
+                    <img class="vertical-card-image" src="images/exhibition-1863344_1920.jpg" alt="An exhibition">
+                    <div class="v-card-content">
                         <h6 class="card-date">9.JAN.2023</h6>
                         <h5 class="card-title">Evolution Exhibition</h5>
                         <p>Read more</p>
@@ -181,11 +176,8 @@
                     </div>
                 </a>
                 <a href="#" class="vertical-card">
-                    <div class="v-card-content-1">
-                        <img class="vertical-card-image" src="images/mammoth-1257288_1920.jpg" alt="A mammoth skeleton">
-                    </div>
-                    
-                    <div class="v-card-content-2">
+                    <img class="vertical-card-image" src="images/mammoth-1257288_1920.jpg" alt="A mammoth skeleton">
+                    <div class="v-card-content">
                         <h6 class="card-date">9.JAN.2023</h6>
                         <h5 class="card-title">Evolution Exhibition</h5>
                         <p>Read more</p>
