--- a/contribution.html
+++ b/contribution.html
@@ -80,8 +80,8 @@
                 <li>
                     <a href="visit-us.html">Visit us</a>
                     <a href="contribution.html">Contributions</a>
-                    <a href="#">Terms & Conditions</a>
-                    <a href="#">Privacy & Cookies</a>
+                    <a href="Terms_Conditions.html">Terms & Conditions</a>
+                    <a href="Privacy-cookies.html">Privacy & Cookies</a>
                 </li>
             </ul>
 
