Updates to all pages.

--- a/contribution.html
+++ b/contribution.html
@@ -27,7 +27,7 @@
                             <a href="visit-us.html">Visit us</a>
                             <a href="exhibitions.html">Exhibitions</a>
                             <a href="contribution.html">Contributions</a>
-                            <a class="link-contactus" href="#">CONTACT US</a>
+                            <a class="link-contactus" href="contact-us.html">CONTACT US</a>
                         </li>
                     </ul>
                 </nav>
@@ -35,44 +35,53 @@
             </section>
         </header>
 
-        <section class="section-contribution">
-            <div class="wrapper-main contribution" >
-                <h1>Contribution</h1>
-                <div class="card-container">
-                    <div class="vertical-card">
-                        <img src="images/Hands-holding-heart200.jpg" alt="A person showing a heart plush lying between their hands">
-                        <div class="v-card-content">
-                            <h2>Support</h2>
-                            <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.
-                                You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
-                            </p>
-                        </div>  
+        <main>
+            <section class="section-contribution">
+                <div class="wrapper-main contribution">
+                    <h1>Contribution</h1>
+                    <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself. The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us. We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
+                </div>
+                <div class="wrapper-main get-involved" >
+                    <h2>Get Involved</h2>
+                    <div class="card-container">
+                        <div class="vertical-card">
+                            <img src="images/Hands-holding-heart200.jpg" alt="A person showing a heart plush lying between their hands">
+                            <div class="v-card-content">
+                                <h2>Support</h2>
+                                <p>There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community.
+                                    You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
+                                </p>
+                            </div>  
+                        </div>
+                        <div class="vertical-card">
+                            <img class="vertical-card-image" src="images/Holding hand.jpg" alt="Holding hands in a compforting gesture">
+                            <div class="v-card-content">
+                                <h2>Volunteer</h2>
+                                <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
+                                    You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.
+                                </p>
+                            </div>  
+                        </div>
+                        <div class="vertical-card">
+                            <img class="vertical-card-image" src="images/Two-people-atwork-talking.jpg" alt="Two people at work talking">
+                            <div class="v-card-content">
+                                <h2>Internship</h2>
+                                <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
+                                    You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
+                                </p>
+                            </div>  
+                        </div>
                     </div>
-                    <div class="vertical-card">
-                        <img class="vertical-card-image" src="images/Holding hand.jpg" alt="Holding hands in a compforting gesture">
-                        <div class="v-card-content">
-                            <h2>Volunteer</h2>
-                            <p>A number of people volunteer their time and effort to keep the displays in good order and ready for visitors to come and enjoy. Volunteering has its perks including getting to see behind the scenes of a working museum, access to staff-only lectures, and a monthly lunch where all staff and volunteers come together to discuss ideas for future exhibits and strategies for the museum.
-                                You can help volunteer in a number of different spheres. Please contact us if you’d like to find out more about how you can get involved.
-                            </p>
-                        </div>  
-                    </div>
-                    <div class="vertical-card">
-                        <img class="vertical-card-image" src="images/Two-people-atwork-talking.jpg" alt="Two people at work talking">
-                        <div class="v-card-content">
-                            <h2>Internship</h2>
-                            <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.
-                                You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
-                            </p>
-                        </div>  
+                    <div class="get-in-touch">
+                        <a href="#" class="button-main" >Get in touch</a>
                     </div>
                 </div>
-                <div class="get-in-touch">
-                    <button class="button-get-in-touch">Get in touch</button>
-                </div>
-            </div>
+    
+            </section>
 
-        </section>
+        </main>
+
+       
 
         <footer>
             <img src="images/Logo_White.png" class="footer-logo" alt="Community Science Museum logo">
