--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="Community Science Museum" content="Community Science Museum is a place for primary to  middle school children and families with young children to enjoy.">
-        <title>Community Science Museum</title>
+        <meta name="Privacy Policy" content="Stay informed about our privacy policy">
+        <title>Privacy Policy</title>
         <link rel="stylesheet" href="CSS/Reset.css">
         <link rel="stylesheet" href="CSS/Main.css">
         <link rel="stylesheet" href="CSS/Nav.css">
