--- a/visit-us.html
+++ b/visit-us.html
@@ -29,7 +29,7 @@
                         <a href="visit-us.html">Visit us</a>
                         <a href="exhibitions.html">Exhibitions</a>
                         <a href="contribution.html">Contributions</a>
-                        <a class="link-contactus" href="#">CONTACT US</a>
+                        <a class="link-contactus" href="contact-us.html">CONTACT US</a>
                     </li>
                 </ul>
             </nav>
@@ -81,11 +81,11 @@
                     <table class="table-fees">
                         <tr>
                             <th>Entrance fee:</th>
-                            <th class="p-bold">FREE</th>
+                            <th class="p-bold-2">FREE</th>
                         </tr>
                         <tr>
                             <th>Guided tour:</th>
-                            <th class="p-bold">70 NOK</th>
+                            <th class="p-bold-2">70 NOK</th>
                         </tr>
                     </table>
                     <p>If you would like to organize a guided tour for your</p>
@@ -100,7 +100,7 @@
                         <p>and braille display signs for the visually impaired.</p>
                     </div>
                     <div class="more-foodanddrink">
-                        <i class="fa-solid fa-utensils"></i>
+                        <i class="fa-solid fa-utensils food-drink-icon"></i>
                         <h2>Food and Drink</h2>
                         <p>There is a café attached to the museum where you can get</p>
                         <p>light lunches, soft drinks, coffee, snacks and more.</p>
