--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -112,7 +112,7 @@
                 <a href="visit-us.html">Visit us</a>
                 <a href="contribution.html">Contributions</a>
                 <a href="Terms_Conditions.html">Terms & Conditions</a>
-                <a href="Privacy-cookies.html">Privacy & Cookies</a>
+                <a href="privacy-policy.html">Privacy & Cookies</a>
             </li>
         </ul>
 
