--- a/contribution.html
+++ b/contribution.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="CSS/Footer.css">
         <link rel="stylesheet" href="CSS/contribution.css">
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -26,7 +29,7 @@
                         <li>
                             <a href="visit-us.html">Visit us</a>
                             <a href="exhibitions.html">Exhibitions</a>
-                            <a href="contribution.html">Contributions</a>
+                            <a href="contribution.html" class="nav-highlight-page" >Contributions</a>
                             <a class="link-contactus" href="contact-us.html">CONTACT US</a>
                         </li>
                     </ul>
