--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -43,7 +43,7 @@
     <main>
         <section class="wrapper-main container">
             <div class="top-block">
-                <h1>Privacy Policy & Cookies</h1>
+                <h1>Privacy Policy</h1>
             <p> <i>Updated: 12/12/2023</i> </p>
 
             </div>
