Changes to all pages

--- a/Terms_Conditions.html
+++ b/Terms_Conditions.html
@@ -3,12 +3,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+        <!-- Meta and title-->
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="Terms & Conditions" content="Explore our terms and conditions">
         <title>Terms and Conditions</title>
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="CSS/documents.css">
+        <!--Fontawesome Icons -->
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
+        <!-- Google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -33,7 +37,6 @@
                 </ul>
             </nav>
         </section>
-
     </header>
 
     <main>
@@ -42,8 +45,6 @@
                 <h1>Terms & Conditions</h1>
                 <p><i>Last Updated: 12/12/2023</i></p>
             </div>
-            
-
             <div class="block">
                 <h2>Introduction</h2>
                 <p>Welcome to the Community Science Museum website. By accessing our website, you agree to these terms and conditions. Please read them carefully.</p>
@@ -91,9 +92,7 @@
                 <h2>Contact Information</h2>
                 <p>For any questions regarding these Terms, please contact us at csm@support.com.</p>
             </div>
-
         </section>
-
     </main>
 
     <footer>
@@ -106,15 +105,12 @@
                 <a href="privacy-policy.html">Privacy & Cookies</a>
             </li>
         </ul>
-
         <div class="footer-socials">
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-brands fa-youtube"></i></a>
             <a href="#"><i class="fa-brands fa-twitter"></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
-
         </div>
     </footer>
-
 </body>
 </html>
