--- a/contribution.html
+++ b/contribution.html
@@ -3,12 +3,16 @@
 <html lang="en">
 
     <head>
+        <!-- Meta and title-->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="Contribution" content="Learn how you can support the museum.">
         <title>Contribution</title>
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="CSS/contribution.css">
+        <!--Fontawesome Icons -->
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
+        <!-- Google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -75,9 +79,7 @@
                         <a href="#" class="button-main" >Get in touch</a>
                     </div>
                 </div>
-    
             </section>
-
         </main>
 
        
@@ -98,7 +100,6 @@
                 <a href="#"><i class="fa-brands fa-youtube"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
-
             </div>
         </footer>
     </body>
