--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,12 +3,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+        <!-- Meta and title-->
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="Privacy Policy" content="Stay informed about our privacy policy">
         <title>Privacy Policy</title>
+        <!-- Stylesheet -->
         <link rel="stylesheet" href="CSS/documents.css">
+        <!--Fontawesome Icons -->
         <script src="https://kit.fontawesome.com/ab8b6737a1.js" crossorigin="anonymous"></script>
+        <!-- Google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -41,9 +45,7 @@
             <div class="top-block">
                 <h1>Privacy Policy</h1>
             <p> <i>Updated: 12/12/2023</i> </p>
-
             </div>
-            
             <div class="block">
                 <h2>Introduction</h2>
                 <p>Welcome to Community Science Museum, a community science museum located in Oslo. Our website is dedicated to providing information about our museum, including exhibits, events, and </p>
@@ -96,7 +98,6 @@
                 <h2>Governing Law</h2>
                 <p>This privacy policy is governed by Norwegian law. </p>
             </div>
-
         </section>
 
     </main>
@@ -120,6 +121,5 @@
 
         </div>
     </footer>
-
 </body>
 </html>
